# fractional-coalescent-material

./: LICENSE  README  combined_plot_oct_squeeze.py  extract_col_bf
heterogeneity/111_1/: outfile111.0.5  outfile111.0.6  outfile111.0.9
heterogeneity/124_1/: infile124  outfile124.0.6  outfile124.0.7  outfile124.0.8  outfile124.0.9
heterogeneity/128_1/: outfile128_0.5  outfile128_0.6  outfile128_0.7  runner128
humpback/: README  bf-table  bf-tabler  infile.humpback_northern  log_0.4  log_0.4.slurm  log_0.45  log_0.45.slurm  log_0.5  log_0.5.slurm  log_0.55  log_0.55.slurm  log_0.6  log_0.6.slurm  log_0.65  log_0.65.slurm  log_0.7  log_0.7.slurm  log_0.75  log_0.75.slurm  log_0.8  log_0.8.slurm  log_0.85  log_0.85.slurm  log_0.9  log_0.9.slurm  log_0.95  log_0.95.slurm  log_1.0  log_1.0.slurm  outfile_humpbacknorth_0.4  outfile_humpbacknorth_0.45  outfile_humpbacknorth_0.5  outfile_humpbacknorth_0.55  outfile_humpbacknorth_0.6  outfile_humpbacknorth_0.65  outfile_humpbacknorth_0.7  outfile_humpbacknorth_0.75  outfile_humpbacknorth_0.8  outfile_humpbacknorth_0.85  (+22 more)
influenza/: README  bf-table  bf-tabler  infile1.nex  infile1.phy  infile2.nex  infile2.phy  infile3.nex  infile3.phy  infile4.nex  infile4.phy  infile5.nex  infile5.phy  infile6.nex  infile6.phy  infile7.nex  infile7.phy  infile8.nex  infile8.phy  influenza_h1n1_mexico_2014.sorted  influenza_h1n1_mexico_2014_infile  log_0.4  log_0.4.slurm  log_0.45  log_0.45.slurm  log_0.5  log_0.5.slurm  log_0.55  log_0.55.slurm  log_0.6  log_0.6.slurm  log_0.65  log_0.65.slurm  log_0.7  log_0.7.slurm  log_0.75  log_0.75.slurm  log_0.8  log_0.8.slurm  log_0.85  (+44 more)
malaria/: README  README.paup  bf-table  bf-tabler  infile.nex  infile.phy  infile.plasmodium  log_0.4  log_0.4.slurm  log_0.45  log_0.45.slurm  log_0.5  log_0.5.slurm  log_0.55  log_0.55.slurm  log_0.6  log_0.6.slurm  log_0.65  log_0.65.slurm  log_0.7  log_0.7.slurm  log_0.75  log_0.75.slurm  log_0.8  log_0.8.slurm  log_0.85  log_0.85.slurm  log_0.9  log_0.9.slurm  log_0.95  log_0.95.slurm  log_1.0  log_1.0.slurm  outfile_plasmodium_0.4  outfile_plasmodium_0.45  outfile_plasmodium_0.5  outfile_plasmodium_0.55  outfile_plasmodium_0.6  outfile_plasmodium_0.65  outfile_plasmodium_0.7  (+30 more)
sim/: README  bf_indloci.py  create_gugus
sim/sim100_1/: .panfs.2428ae90.1500774324186043000  README2  bf_indloci.py  create_gugus  create_sim.py  datefile  gugus  gugus.old  hist.py  migrate-n-mpi  outfile_0.4_0.4  outfile_0.4_0.5  outfile_0.4_0.6  outfile_0.4_0.7  outfile_0.4_0.8  outfile_0.4_0.9  outfile_0.4_1.0  outfile_0.5_0.4  outfile_0.5_0.5  outfile_0.5_0.5_orig  outfile_0.5_0.6  outfile_0.5_0.7  outfile_0.5_0.8  outfile_0.5_0.9  outfile_0.5_1.0  outfile_0.6_0.4  outfile_0.6_0.5  outfile_0.6_0.6  outfile_0.6_0.7  outfile_0.6_0.8  outfile_0.6_0.9  outfile_0.6_1.0  outfile_0.7_0.4  outfile_0.7_0.5  outfile_0.7_0.6  outfile_0.7_0.7  outfile_0.7_0.8  outfile_0.7_0.9  outfile_0.7_1.0  outfile_0.8_0.4  (+92 more)
sim/sim100_2/: README  dada  datefile  gugus  outfile  outfile_0.4_0.4  outfile_0.4_0.5  outfile_0.4_0.6  outfile_0.4_0.7  outfile_0.4_0.8  outfile_0.4_0.9  outfile_0.4_1.0  outfile_0.5_0.4  outfile_0.5_0.5  outfile_0.5_0.6  outfile_0.5_0.7  outfile_0.5_0.8  outfile_0.5_0.9  outfile_0.5_1.0  outfile_0.6_0.4  outfile_0.6_0.5  outfile_0.6_0.6  outfile_0.6_0.7  outfile_0.6_0.8  outfile_0.6_0.9  outfile_0.6_1.0  outfile_0.7_0.4  outfile_0.7_0.5  outfile_0.7_0.6  outfile_0.7_0.7  outfile_0.7_0.8  outfile_0.7_0.9  outfile_0.7_1.0  outfile_0.8_0.4  outfile_0.8_0.5  outfile_0.8_0.6  outfile_0.8_0.7  outfile_0.8_0.8  outfile_0.8_0.9  outfile_0.8_1.0  (+25 more)
sim/sim100_3/: datefile  grepper  gugus  outfile_0.4_0.4  outfile_0.4_0.5  outfile_0.4_0.6  outfile_0.4_0.7  outfile_0.4_0.8  outfile_0.4_0.9  outfile_0.4_1.0  outfile_0.5_0.4  outfile_0.5_0.5  outfile_0.5_0.6  outfile_0.5_0.7  outfile_0.5_0.8  outfile_0.5_0.9  outfile_0.5_1.0  outfile_0.6_0.4  outfile_0.6_0.5  outfile_0.6_0.6  outfile_0.6_0.7  outfile_0.6_0.8  outfile_0.6_0.9  outfile_0.6_1.0  outfile_0.7_0.4  outfile_0.7_0.5  outfile_0.7_0.6  outfile_0.7_0.7  outfile_0.7_0.8  outfile_0.7_0.9  outfile_0.7_1.0  outfile_0.8_0.4  outfile_0.8_0.5  (+40 more)
sources/migrate-5.0.3a/: HISTORY  Makefile.in  README  README_PARALLEL_GENERAL  README_PARALLEL_WINDOWS  configure  configure.in  copy_mt_to_src  install_migrate  jamfile  migrate.html
sources/migrate-5.0.3a/SFMT-src-1.4.1/: SFMT.c  test-std-M19937
sources/migrate-5.0.3a/contribution/: bayes-posthoc-analysis.R  compile_icc  mathfile-contour.nb  mba
sources/migrate-5.0.3a/example/: .bayesallfile.shfp.480062  .bayesallfile.shfp.658797  .bayesallfile.shfp.674196  .bayesallfile.shfp.879693  .gdb_history  README  infile.gap  infile.seq  outfile-bayes  outfile-bayes-2015Feb22  outfile-gap-2015Feb22  outfile-seq-2015Feb22  outfile-twoswisstowns-2015Feb22  parmfile  parmfile.gap  parmfile.seq  parmfile.testbayes  parmfile.twoswisstowns  twoswisstowns
sources/migrate-5.0.3a/haru/: PdfCMap.cc  PdfCMap_ETen_B5.cc  PdfCMap_EUC.cc  PdfCMap_GB_EUC.cc  PdfCMap_KSC_EUC.cc  PdfCMap_KSCms_UHC.cc  PdfCMap_RKSJ.cc  PdfEncoding_KOI8.cc  PdfEncrypt.cc  PdfFontDef.cc  PdfFontDef.plist  PdfFonts.cc  PdfFonts.plist  PdfJpegImage.cc  PdfMbFonts.cc  PdfPngImage.cc  PdfStreams.cc  libharu.h  libharu_KOI8.h  libharu_jpeg.cc  libharu_png.cc  libharuc.cc  libharuc.h  libharuc.plist  libharuc_KOI8.h  makefile.msvc
sources/migrate-5.0.3a/haru/examples_c/: encoding_list.c  font_example1.c  font_example2.c
sources/migrate-5.0.3a/haru/experimental/: LibHaru.txt
sources/migrate-5.0.3a/migshelltemplate.app/Contents/: Info.plist
sources/migrate-5.0.3a/src/: assignment.c  assignment.h  autotune.c  autotune.h  avx_intel.c  avxerf.c  avxmain.c  bayes.c  bayes.h  calculator.c  calculator.h  cholesky.c  cholesky.h  combine.h  combroyden.h  conf.h  conf.h.in  correlation.c  correlation.h  custommig.c  data.c  data.h  datamenu.c  definitions.h  f84.c  f84gap.c  fastexp.c  fp_exception_glibc_extension.h  fst.c  fst.h  growth.c  growth.h  guess_core.c  haplotype.c  haplotype.h  hash.c  hash.h  heating.c  heating.h  hermite_interpoly.c  (+88 more)
(+418 files in other folders)
